<resources>
    <string name="app_name">My Application</string>
    <string name="news">News</string>
    <string name="how_was_your_day">How was your day</string>
    <string name="your_overall_progress_is_60">Your overall progress is 60%</string>
    <string name="daily_astromeditation">Daily astromeditation</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipscing_elit_ut_vel_odio_en_urna_ultrice">Lorem ipsum dolor sit amet, consectetur adipscing elit. Ut vel odio en urna ultrice...</string>
    <string name="this_is_demonstrate_siblings_hobbies_efforts_confidence_friends_and_short_tr">This is demonstrate siblings, hobbies, efforts, confidence, friends and short tr...</string>
    <string name="current_transist_3rd_house">Current Transist: 3rd House</string>
</resources>