<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="News"
            android:textColor="@color/blue"
            android:textSize="23sp"
            android:textStyle="normal" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="23dp">


                <FrameLayout
                    android:layout_width="146dp"
                    android:layout_height="68dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/frame_1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="Short news title will be here"
                        android:textColor="@color/card_text_color"
                        android:textSize="12sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="146dp"
                    android:layout_height="68dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/frame_2__1_">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="Short news title will be here"
                        android:textColor="@color/card_text_color"
                        android:textSize="12sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="146dp"
                    android:layout_height="68dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/frame_2__2_">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="Short news title will be here"
                        android:textColor="@color/card_text_color"
                        android:textSize="12sp" />

                </FrameLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="28dp"
            android:layout_marginTop="38dp"
            android:fontFamily="sans-serif-light"
            android:text="Daily Tasks:"
            android:textColor="@color/blue"
            android:textSize="23sp"
            android:textStyle="normal" />


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="23dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="94dp"
                    android:layout_height="86dp"
                    android:layout_marginHorizontal="5dp"
                    app:cardBackgroundColor="#F6F5FB"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp">

                        <TextView
                            android:id="@+id/text_view_task_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif"
                            android:text="Daily astromeditation"
                            android:textColor="#61598B"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/text_view_task_1_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="sans-serif-medium"
                            android:text="3"
                            android:textColor="#403572"
                            android:textSize="24sp" />

                        <ImageView
                            android:layout_width="11dp"
                            android:layout_height="7dp"
                            android:layout_alignTop="@id/text_view_task_1_label"
                            android:layout_marginStart="1dp"
                            android:layout_marginTop="8dp"
                            android:layout_toEndOf="@id/text_view_task_1_label"
                            android:src="@drawable/image1"
                            app:tint="#403572" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="94dp"
                    android:layout_height="86dp"
                    android:layout_marginHorizontal="5dp"
                    app:cardBackgroundColor="#FFF4F4"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp">

                        <TextView
                            android:id="@+id/text_view_task_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif"
                            android:text="Daily astromeditation"
                            android:textColor="#FF3726"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/text_view_task_2_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="sans-serif-medium"
                            android:text="1"
                            android:textColor="#FF5648"
                            android:textSize="24sp" />

                        <ImageView
                            android:layout_width="7dp"
                            android:layout_height="8dp"
                            android:layout_alignTop="@id/text_view_task_2_label"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="8dp"
                            android:layout_toEndOf="@id/text_view_task_2_label"
                            android:src="@drawable/image1"
                            app:tint="#FF5648" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="94dp"
                    android:layout_height="86dp"
                    android:layout_marginHorizontal="5dp"
                    app:cardBackgroundColor="#F5F9F9"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp">

                        <TextView
                            android:id="@+id/text_view_task_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif"
                            android:text="@string/daily_astromeditation"
                            android:textColor="#479696"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/text_view_task_3_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="sans-serif-medium"
                            android:text="2"
                            android:textColor="#479696"
                            android:textSize="24sp" />

                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_alignTop="@id/text_view_task_3_label"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="8dp"
                            android:layout_toEndOf="@id/text_view_task_3_label"
                            android:src="@drawable/image1"
                            app:tint="#479696" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </HorizontalScrollView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/your_overall_progress_is_60"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="12dp"
            app:trackColor="#FDF9FB"
            android:max="100"
            android:progress="45"
            app:trackCornerRadius="4dp"
            app:trackThickness="6dp" />


        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="#F6F5FB"
                app:cardCornerRadius="14dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/text_view_task_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="52dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/how_was_your_day"
                    android:textColor="#61598B"
                    android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_alignTop="@id/text_view_task_7"
                        android:src="@drawable/calendar_1"/>

                        <TextView
                            android:id="@+id/text_view_task_8"
                            android:layout_width="213dp"
                            android:layout_height="26dp"
                            android:layout_marginTop="51dp"
                            android:layout_marginStart="51dp"
                            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipscing_elit_ut_vel_odio_en_urna_ultrice"
                            android:textSize="11sp"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="276dp"
                                android:layout_marginTop="44dp"
                                android:src="@drawable/arrow_right_1"/>


                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="28dp"
                        app:cardBackgroundColor="#FFF4F4"
                        app:cardCornerRadius="14dp"
                        app:cardElevation="0dp"
                        tools:ignore="ExtraText">>
                        <TextView
                            android:id="@+id/text_view_task_10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:layout_marginStart="52dp"
                            android:textColor="#FF5648"
                            android:text="@string/current_transist_3rd_house"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="24dp"
                            android:layout_alignTop="@id/text_view_task_10"
                            android:src="@drawable/clock__1__1"/>
                        <TextView
                            android:id="@+id/text_view_task_11"
                            android:layout_width="213dp"
                            android:layout_height="26dp"
                            android:layout_marginTop="51dp"
                            android:layout_marginStart="51dp"
                            android:text="This is demonstrate siblings, hobbies,
efforts, confidence, friends and short tr..."
                            android:textSize="11sp"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="276dp"
                            android:layout_marginTop="44dp"
                            android:src="@drawable/arrow_right_1"/>

                    </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>